chore: add Eslint and Prettier as recommendations and enable VSCode settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-  "recommendations": ["bruceyuhb.hsl-preview", "bradlc.vscode-tailwindcss"]
+  "recommendations": [
+    "bruceyuhb.hsl-preview",
+    "bradlc.vscode-tailwindcss",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
+  ]
 }
