--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format:run": "prettier -w --plugin-search-dir=. .",
+    "format:check": "prettier -c --plugin-search-dir=. ."
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
