--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier -c --plugin-search-dir=. ."
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
