--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ NODE_ENV="development"
 SESSION_COOKIE_MAX_AGE="3600"
 
 API_PORT="3002"
-API_URL="http://localhost:$API_PORT/api/v1"
+API_URL="http://localhost:$API_PORT/api"
