--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "5.56.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "frontend": "file:",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
     "next-themes": "^0.3.0",
