--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
@@ -25,10 +26,13 @@
     "@tanstack/react-query": "5.56.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "frontend": "file:",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "server-only": "0.0.1",
